--- a/style.css
+++ b/style.css
@@ -1,23 +1,91 @@
 :root {
-    --dark-gray: hsl(0, 0%, 8%);
-    --mid-gray: hsl(0, 0%, 12%);
-    --light-gray: hsl(0, 0%, 20%);
-    --white: hsl(0, 0%, 100%);
-    --radioactive-green: hsl(75, 94, 54);
-    --default-letter-spacing: 0;
-    --default-line-height: 1.5rem;
-    --fs-big: 1.5rem;
-    --fs-regular: 0.875rem;
-    --spacing-500: 2.5rem;
-    --spacing-300: 1.5rem;
-    --spacing-200: 1rem;
-    --spacing-150: 0,75rem;
-    --spacing-100: 0.5rem;
+  --dark-gray: hsl(0, 0%, 8%);
+  --mid-gray: hsl(0, 0%, 12%);
+  --light-gray: hsl(0, 0%, 20%);
+  --white: hsl(0, 0%, 100%);
+  --radioactive-green: hsl(75, 94, 54);
+  --default-letter-spacing: 0;
+  --default-line-height: 1.5rem;
+  --fs-big: 1.5rem;
+  --fs-regular: 0.875rem;
+  --spacing-500: 2.5rem;
+  --spacing-300: 1.5rem;
+  --spacing-200: 1rem;
+  --spacing-150: 0, 75rem;
+  --spacing-100: 0.5rem;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+.app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--dark-gray);
+}
+
+.portfolio {
+  display: flex;
+  flex-direction: column;
+  padding: var(--spacing-500);
+  justify-content: center;
+  align-items: center;
+  background-color: var(--mid-gray);
+}
+
+.portfolio__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: var(--spacing-300);
+}
+
+.portfolio__picture {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: var(--spacing-200);
+}
+
+.portfolio__author {
+  font-size: var(--fs-big);
+  color: var(--white);
+  margin-bottom: var(--spacing-100);
+}
+
+.portfolio__address {
+  font-size: var(--fs-regular);
+  color: var(--radioactive-green);
+}
+
+.portfolio__description {
+  font-size: var(--fs-regular);
+  color: var(--white);
+  text-align: center;
+  margin-bottom: var(--spacing-300);
+}
+
+.portfolio___list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: var(--spacing-100);
+}
+
+.portfolio__list-item {
+  text-align: center;
+  padding: var(--spacing-150);
+}
+
+.portfolio__list-item:hover {
+  color: var(--light-gray);
+  background-color: var(--radioactive-green);
+}
